# keydex

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  test-tiny-essay.md  测试.md
.github/release-notes/: README.md  v0.3.11.md  v0.3.12.md  v0.4.0.md  v0.4.1.md  v0.4.10.md  v0.4.11.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.4.6.md  v0.4.7.md  v0.4.8.md  v0.4.9.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md  v0.5.4.md
.github/workflows/: windows-release.yml
.keydex/: keydex.md
.ktaicoding/des/: DES-20260625-001-keydex-skill.md  DES-20260702-001-长程任务.md  DES-20260704-001-MCP运行时.md  DES-20260721-001-侧边栏浏览器.md  DES-20260722-002-浏览器合成宿主重构.md  DES-20260724-001-checkpoint-async-sqlite-migration.md
.ktaicoding/req/: REQ-20260702-001-长程任务.md  REQ-20260721-001-侧边栏浏览器.md
backend/: __init__.py
backend/app/: __init__.py  browser_contract.py  command_approval.py  main.py
backend/packaging/: agent_server_entry.py  build_agent_server.py
backend/tests/: async_checkpoint.py  conftest.py  e2e_keydex_server.py  test_browser_contract.py  test_config.py  test_e2e_keydex_server.py  test_entrypoints.py  test_health.py  test_ids.py  test_logger.py  test_replication_contract.py  test_ripgrep_core.py  test_runtime_bootstrap.py
desktop/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
desktop/e2e/: a2ui-interactive-stability.spec.ts  aligned-diff-performance.spec.ts  aligned-diff-scroll.spec.ts  command-approval-config.spec.ts  diff-a11y-visual.spec.ts  diff-file-preview.spec.ts  diff-lazy-loading.spec.ts  diff-performance.spec.ts  file-review.spec.ts  git-branches-remotes-stash.spec.ts  git-capabilities-safety.spec.ts  git-conflict-advanced.spec.ts  git-continuity-a11y.spec.ts  git-e2e-fixtures.ts  git-fixture-lifecycle.spec.ts  git-history-inspection.spec.ts  git-local-changes.spec.ts  git-shell.spec.ts  html-preview-csp.spec.ts  keydex-context-helpers.ts  keydex-context-lifecycle.spec.ts  keydex-context-safety.spec.ts  keydex-e2e-fixtures.ts  keydex-skill-context-coexistence.spec.ts  keydex-skill.spec.ts  keydex-system-context.spec.ts  keydex-system-skill.spec.ts  keydex-workspace-context.spec.ts  message-file-link-preview.spec.ts  runtime-error-diagnostics.spec.ts  runtime-rendering-flow.spec.ts  sidebar-file-viewer.spec.ts  startup-screen.spec.ts  subagent-controls.spec.ts  subagent-delegation.spec.ts  subagent-e2e-fixtures.ts  subagent-reconnect-hidden.spec.ts  subagent-role-compat.spec.ts  tauri-git-smoke.conf.json  terminal-visual.spec.ts  (+5 more)
desktop/public/: project-mode-demo.html
desktop/src/: App.module.css  App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.dev-isolated.conf.json
desktop/src-tauri/binaries/: agent-server.build.json
desktop/src-tauri/capabilities/: browser-page-bridge.json  default.json
desktop/src-tauri/permissions/: application-commands.toml
desktop/src-tauri/src/: lib.rs  main.rs  storage_layout.rs  supervisor.rs
desktop/src-tauri/src/browser/: adapter.rs  bounds.rs  bridge.rs  capture.rs  commands.rs  config.rs  contract.rs  devtools_element_target.js  devtools_inspector.rs  direct_webview2.rs  downloads.rs  failures.rs  file_chooser.rs  geometry.rs  host.rs  mod.rs  navigation.rs  page_bridge.js  page_bridge_element.js  page_bridge_frame.js  page_bridge_mutation.js  page_bridge_overlay.js  page_bridge_region.js  page_bridge_text.js  page_link_policy.js  permissions.rs  probe.rs  profiles.rs  resources.rs  security.rs  surface.rs  ui_actor.rs  window_host.rs  windowed_surface.rs
desktop/src-tauri/src/terminal/: cwd.rs  manager.rs  mod.rs  process.rs  process_tree.rs  profiles.rs  protocol.rs  replay.rs
desktop/tests/: a2ui-accessibility.spec.tsx  a2ui-block.spec.tsx  a2ui-chart.spec.tsx  (+511 more)
docs/: DES-20260712-001-Keydex项目模式任务闭环与云端接入.md  checkpoint-async-sqlite-migration-runbook.md  codex-tool-stack-analysis.md  file-edit-tool-style.md  git-error-contract.md  git-open-source-attribution.md  keydex-frontend-design-specification.md  keydex-frontend-style-audit.md  mcp-runtime.md  project-structure.html  project-structure.md  runtime-foundation-feature-gap-checklist.md  sidebar-browser.md
own-docs/: PROJECT-STATUS.md  python-codex-clone-development-plan.md
scripts/: dev-start.ps1  package-windows.ps1  set-release-version.ps1
tmp-data/: app.db
(+1628 files in other folders)
