[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keydex"
version = "0.1.0"
description = "Keydex local desktop agent backend."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "httpx>=0.27,<1.0",
  "langchain>=1.1,<2.0",
  "langchain-core>=1.2,<2.0",
  "langchain-openai>=1.0,<2.0",
  "langgraph>=1.0,<1.3",
  "langgraph-checkpoint>=2.0,<4.0",
  "loguru>=0.7,<1.0",
  "mcp~=1.26",
  "watchfiles>=1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
