[package]
name = "keydex-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "keydex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Enables OS proxy discovery for tauri-plugin-updater via Cargo feature unification.
reqwest = { version = "0.13", default-features = false, features = ["system-proxy"] }
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
