[package]
name = "keydex-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "keydex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Enables OS proxy discovery for tauri-plugin-updater via Cargo feature unification.
reqwest = { version = "0.13", default-features = false, features = ["system-proxy"] }
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
portable-pty = "0.9.0"
base64 = "0.22.1"
uuid = { version = "1.24.0", features = ["v4"] }

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
winreg = "0.56.0"
