[package]
name = "keydex-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "keydex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
browser-devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Enables OS proxy discovery for tauri-plugin-updater via Cargo feature unification.
reqwest = { version = "0.13", default-features = false, features = ["system-proxy"] }
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
portable-pty = "0.9.0"
base64 = "0.22.1"
uuid = { version = "1.24.0", features = ["v4"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
sha2 = "0.10.9"
url = "2"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
windows_061 = { package = "windows", version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }
webview2-com = "0.38.2"
winreg = "0.56.0"
